[package]
name             = "neko"
version          = "0.0.1"
authors          = ["adjivas <adjivas@users.noreply.github.com>"]
description      = ""
readme           = "README.md"
keywords         = ["editor","neko", "glyphArt", "sprite", "texel"]
license          = "GPL-3.0"

[lib]
name             = "graphic"
path             = "src/graphic/mod.rs"
plugin           = true
doctest          = false
test             = false

[[bin]]
name             = "editeur"
path             = "src/main.rs"
doc              = false
test             = false

[features]
default          = []
lints            = ["clippy", "nightly"]
nightly          = [] # for building with nightly and unstable features
unstable         = [] # for building with unstable features on stable Rust
debug            = [] # for building with debug messages
travis           = ["lints", "nightly"] # for building with travis-cargo

[dependencies.clippy]
version          = "*"
optional         = true

[dependencies.clipboard]
version          = "0.1.2"
optional         = true

[dependencies.termion]
version          = "1.0"
